--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -26,7 +26,7 @@
       const password = document.getElementById("password").value;
 
       try {
-        const res = await fetch("http://localhost:5000/auth/signup", {
+        const res = await fetch("https://api.asifahmadkhan.com/auth/signup", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ username, email, password })
