tinnyllama model working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,9 +17,7 @@
       <div class="model-select">
         <label for="modelSelect">Model</label>
         <select id="modelSelect">
-          <option value="llama3">llama3</option>
-          <option value="codellama">codellama</option>
-          <option value="mistral">mistral</option>
+          <option value="smollm2">smollm2</option>
           <option value="tinyllama">tinyllama</option>
         </select>
       </div>
