--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,7 +24,7 @@
       const password = document.getElementById("password").value;
 
       try {
-        const res = await fetch("https://api.asifahmadkhan.com/auth/login", {
+        const res = await fetch("http://localhost:8080/auth/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, password })
