added the landing page

--- a/ApplicationCode/frontend/signup.html
+++ b/ApplicationCode/frontend/signup.html
@@ -35,7 +35,7 @@
         const data = await res.json();
         if (res.ok) {
           alert("Signup successful! Please login.");
-          window.location.href = "login.html";
+          window.location.href = "chat.html";
         } else {
           alert(data.error || "Signup failed.");
         }
