--- a/ApplicationCode/frontend/login.html
+++ b/ApplicationCode/frontend/login.html
@@ -34,7 +34,7 @@
 
         if (res.ok && data.token) {
           localStorage.setItem("token", data.token);
-          window.location.href = "index.html";
+          window.location.href = "chat.html";
         } else {
           alert(data.error || "Login failed.");
         }
